--- a/src/main.module.css
+++ b/src/main.module.css
@@ -1,6 +1,8 @@
 @import 'normalize.css';
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif;
   font-weight: 900;
   letter-spacing: -0.5px;
