--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -24,7 +24,6 @@
   &__vector {
     display: flex;
     justify-content: center;
-    align-items: flex-end;
     flex-wrap: wrap;
     gap: 3vw;
   }
@@ -36,6 +35,12 @@
 
   &__image {
     border-radius: 10px;
+    width: 6vw;
+  }
+
+  &__image_mobile {
+    border-radius: 10px;
+    width: 15vw;
   }
 
   &__title {
@@ -57,6 +62,7 @@
     text-align: center;
     color: white;
     margin: 0;
+    padding: 0 10px;
   }
 }
 
