--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 6vw;
+  gap: 2vw;
 
   &__vector {
     display: flex;
@@ -55,6 +55,10 @@
     padding: 10px 20px;
     border-radius: 10px;
     outline: 1px solid white;
+  }
+
+  &__bottom {
+    max-width: 735px;
   }
 
   &__title_bottom {
