--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -21,14 +21,6 @@
   align-items: center;
   gap: 2vw;
 
-  &__mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 10px;
-    gap: 10vw;
-  }
-
   &__vector {
     display: flex;
     justify-content: center;
@@ -75,6 +67,20 @@
     color: white;
     margin: 0;
     padding: 0 10px;
+  }
+
+  &__grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 1rem;
+    box-sizing: border-box;
+  }
+
+  &__grid_mobile {
+    grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    gap: 1rem;
+    box-sizing: border-box;
   }
 }
 
