--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -19,27 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2vw;
-
-  &__mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 10px;
-    gap: 15vw;
-  }
-
-  &__vector {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 3vw;
-  }
-
-  &__box {
-    display: flex;
-    gap: 3vw;
-  }
+  gap: 12vh;
 
   &__image {
     border-radius: 10px;
@@ -48,28 +28,14 @@
 
   &__image_mobile {
     border-radius: 10px;
-    width: 15vw;
-  }
-
-  &__title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    margin: 0;
-    width: 300px;
-    font-size: 20px;
-    color: #c8c8c7;
-    padding: 10px 20px;
-    border-radius: 10px;
-    outline: 1px solid white;
+    width: 12vw;
   }
 
   &__bottom {
-    max-width: 735px;
+    max-width: 1500px;
   }
 
-  &__title_bottom {
+  &__title {
     display: flex;
     text-align: center;
     color: white;
@@ -78,15 +44,14 @@
   }
 
   &__grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    gap: 1rem;
-    box-sizing: border-box;
+    display: flex;
+    flex-grow: 1;
+    gap: 2rem;
   }
 
   &__grid_mobile {
-    grid-template-columns: repeat(3, 1fr);
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
     box-sizing: border-box;
   }
