--- a/src/pages/style.module.scss
+++ b/src/pages/style.module.scss
@@ -101,14 +101,20 @@
   &__container_mobile {
     display: flex;
     flex-direction: column;
-    gap: 10vh;
-    padding: 10vh 0;
-    height: 50vh;
+    gap: 20px;
+    height: 90vh;
     width: 90%;
   }
   &__map {
     min-width: 40%;
     width: 100%;
+    border-radius: 1em;
+    overflow: hidden;
+  }
+
+  &__map_mobile {
+    width: 100%;
+    height: 40%;
     border-radius: 1em;
     overflow: hidden;
   }
