--- a/src/components/app/style.module.scss
+++ b/src/components/app/style.module.scss
@@ -10,6 +10,6 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 3vw 2vw;
+  padding: 2vh 5vw;
   box-sizing: border-box;
 }
